@@ -1,20 +1,28 @@
 package rbasamoyai.createbigcannons.munitions.big_cannon.fluid_shell;
 
+import java.util.HashSet;
+import java.util.Optional;
+import java.util.Set;
+
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.EntityDataSerializers;
 import net.minecraft.network.syncher.SynchedEntityData;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.level.ClipContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.EntityHitResult;
 import net.minecraft.world.phys.HitResult;
+import net.minecraft.world.phys.Vec3;
 import rbasamoyai.createbigcannons.config.CBCConfigs;
 import rbasamoyai.createbigcannons.multiloader.NetworkPlatform;
 import rbasamoyai.createbigcannons.munitions.fragment_burst.CBCProjectileBurst;
 import rbasamoyai.createbigcannons.network.ClientboundFluidBlobStackSyncPacket;
+import rbasamoyai.ritchiesprojectilelib.projectile_burst.ProjectileBurstClipContext;
 
 public class FluidBlobBurst extends CBCProjectileBurst {
 
@@ -26,6 +34,8 @@ public class FluidBlobBurst extends CBCProjectileBurst {
 	public static float getBlockAffectChance() {
 		return CBCConfigs.SERVER.munitions.fluidBlobBlockAffectChance.getF();
 	}
+
+	private final Set<Entity> clippedThisTick = new HashSet<>();
 
 	@Override
 	protected void defineSynchedData() {
@@ -63,6 +73,7 @@ public class FluidBlobBurst extends CBCProjectileBurst {
 
 	@Override
 	public void tick() {
+		this.clippedThisTick.clear();
 		super.tick();
 
 		if (!this.level.isClientSide) {
@@ -82,6 +93,37 @@ public class FluidBlobBurst extends CBCProjectileBurst {
 		}
 	}
 
+	protected HitResult clipAndDamage(SubProjectile info) {
+		Vec3 vel = new Vec3(info.velocity()[0], info.velocity()[1], info.velocity()[2]);
+		Vec3 start = new Vec3(info.displacement()[0] + this.getX(), info.displacement()[1] + this.getY(), info.displacement()[2] + this.getZ());
+		Vec3 end = start.add(vel);
+		double halfHeight = this.getSubProjectileHeight() / 2d;
+		double halfWidth = this.getSubProjectileWidth() / 2d;
+		HitResult hitResult = this.level.clip(new ProjectileBurstClipContext(start, end, ClipContext.Block.COLLIDER,
+			ClipContext.Fluid.NONE, this, start.y - halfHeight));
+		if (hitResult.getType() != HitResult.Type.MISS)
+			end = hitResult.getLocation();
+		AABB aabb = new AABB(start.x - halfWidth, start.y - halfHeight, start.z - halfWidth, start.x + halfWidth,
+			start.y + halfHeight, start.z + halfWidth).inflate(this.getBlobSize());
+		this.clipEntities(start, end, aabb.expandTowards(vel).inflate(1.0), info);
+		return hitResult;
+	}
+
+	private void clipEntities(Vec3 startVec, Vec3 endVec, AABB boundingBox, SubProjectile subProjectile) {
+		float inflate = this.getBlobSize() + 0.3f;
+		for (Entity entity : this.level.getEntities(this, boundingBox, this::canHitEntity)) {
+			AABB entityBB = entity.getBoundingBox().inflate(inflate);
+			Optional<Vec3> optional = entityBB.clip(startVec, endVec);
+			if (optional.isPresent())
+				this.onSubProjectileHitEntity(new EntityHitResult(entity), subProjectile);
+		}
+	}
+
+	@Override
+	public boolean canHitEntity(Entity target) {
+		return !this.clippedThisTick.contains(target) && super.canHitEntity(target);
+	}
+
 	@Override
 	protected void onSubProjectileHit(HitResult result, SubProjectile subProjectile) {
 		if (!this.level.isClientSide)
@@ -98,6 +140,7 @@ public class FluidBlobBurst extends CBCProjectileBurst {
 
 	@Override
 	protected void onSubProjectileHitEntity(EntityHitResult result, SubProjectile subProjectile) {
+		this.clippedThisTick.add(result.getEntity());
 		if (!this.level.isClientSide)
 			FluidBlobEffectRegistry.effectOnHitEntity(this, subProjectile, result);
 		super.onSubProjectileHitEntity(result, subProjectile);
