@@ -86,6 +86,11 @@ Changed:
  - Changed default drag values of big cannon and autocannon projectiles to 0.001 by default
  - Changed default drag values of projectile burst sub-projectiles to 0 by default
 - Tweaked Mortar Stone to be able to handle equivalent of 3 Powder Charges, up from 1 Powder Charge
+- Improved in-world effects of fluid blob fluids
+ - Added ability for fluid blob to affect entities in-flight
+ - Water-filled Fluid Blob harms entities sensitive to water and douses entities
+ - Lava-filled fluid blob now lights certain blocks, opposite to water's effects
+ - Potion-filled Fluid Blob applies its effect to entities while in flight
 Fixed:
 - Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
 - Fixed cannon loader pushing without head
